--- a/csv/Makefile.in
+++ b/csv/Makefile.in
@@ -53,8 +53,7 @@ host_triplet = @host@
 subdir = csv
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/build-aux/guile.m4 \
-	$(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -123,6 +122,7 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GREP = @GREP@
+GUILD = @GUILD@
 GUILE = @GUILE@
 GUILECONFIG = @GUILECONFIG@
 GUILE_CFLAGS = @GUILE_CFLAGS@
